Replace new java collection methods with compat versions